Start turtle animation

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             </path>
             <circle cx="0" cy="0" r="5" fill="green" id="turtle">
                 <animateMotion id="turtleanimation"
-                dur="2s"
-                repeatCount="indefinite"
+                repeatCount="1"
+                begin="indefinite"
+                fill="freeze"
                 path="" />
             </circle>
         </svg>
