--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
                 stroke-width="2"
                 fill="none">
             </path>
-            <circle cx="0" cy="0" r="5" fill="green" id="turtle">
+            <polygon points="-15,15 -15,-15 15,0" fill="green" id="turtle">
                 <animateMotion id="turtleanimation"
                 repeatCount="1"
                 begin="indefinite"
                 fill="freeze"
+                rotate="auto"
                 path="" />
-            </circle>
+            </polygon>
         </svg>
     <div>
         <button type="button" onclick="draw()">Draw Your Moves</button>
